--- a/assets/css/whats.css
+++ b/assets/css/whats.css
@@ -2,9 +2,9 @@
 	position:fixed;
 	width:60px;
 	height:60px;
-	bottom:40px;
-	right:40px;
-	background-color:#25d366;
+	bottom: 15px;
+    right: 16px;
+	background-color:#4cc370;
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
@@ -14,8 +14,8 @@
 }
 .float:hover {
 	text-decoration: none;
-	color: #25d366;
-  background-color:#fff;
+	color: #fff;
+  background-color:#3d9e5a;
 }
 
 .my-float{
